--- a/RESTFul Services Demo/war/app/persons-remote.html
+++ b/RESTFul Services Demo/war/app/persons-remote.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Customer Management</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap.min.css" >
+    <link rel="stylesheet" media="screen" href="app/bootstrap/css/bootstrap.min.css" >
     <style type="text/css">
         body {
             padding-top: 60px;
             padding-bottom: 40px;
         }
     </style>
-    <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap-responsive.min.css" >
+    <link rel="stylesheet" media="screen" href="app/bootstrap/css/bootstrap-responsive.min.css" >
 </head>
 <body ng-controller="CustomerCtrl">
     <div class="container">
@@ -75,8 +75,8 @@
         </div>
     </div>
 
-    <script src="angular/angular.min.js"></script>
-    <script src="angular/angular-resource.min.js"></script>
-    <script src="persons-remote.js"></script>
+    <script src="app/angular/angular.min.js"></script>
+    <script src="app/angular/angular-resource.min.js"></script>
+    <script src="app/persons-remote.js"></script>
 </body>
 </html>
